[gd_scene load_steps=9 format=3 uid="uid://c7lbhgcydf2bl"]

[ext_resource type="Script" uid="uid://dyquvqtxysxpl" path="res://ui/death_screen.gd" id="1_death_script"]
[ext_resource type="Texture2D" uid="uid://23ptjp1lf0ux" path="res://assets/death_screen/Gemini_Generated_Image_deyyqpdeyyqpdeyy-removebg-preview.png" id="2_4vofl"]
[ext_resource type="Texture2D" uid="uid://1m0jjgkjaota" path="res://assets/death_screen/Gemini_Generated_Image_m8r8eqm8r8eqm8r8_1_-removebg-preview.png" id="3_dswlw"]
[ext_resource type="Texture2D" uid="uid://dhegl4n3ek7mu" path="res://assets/death_screen/deathscreenpopup.png" id="4_h4ie6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3qirs"]
texture = ExtResource("2_4vofl")
region_rect = Rect2(68, 174, 360, 156)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4vofl"]
texture = ExtResource("2_4vofl")
region_rect = Rect2(68, 174, 360, 156)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dswlw"]
texture = ExtResource("3_dswlw")
region_rect = Rect2(68, 174, 360, 156)

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_death_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PopupContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainBox" type="VBoxContainer" parent="PopupContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ImageContainer" type="Panel" parent="PopupContainer/MainBox"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="ImageDisplay" type="TextureRect" parent="PopupContainer/MainBox/ImageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_h4ie6")
expand_mode = 2
stretch_mode = 5

[node name="ButtonContainer" type="HBoxContainer" parent="PopupContainer/MainBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.599976
offset_top = 35.0
offset_right = 45.599976
offset_bottom = 80.599976
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_3qirs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4vofl")
theme_override_styles/hover = SubResource("StyleBoxTexture_dswlw")
